export const enum TipoAlerta {
  CRITICA,
  ESTANDAR,
  APAGADO,
}
