import Alerta from "../alertas/alerta";
import IEmpleado from "../interfaces/empleado";

export default class Supervisor implements IEmpleado {
  notificar(a: Alerta): void {
    // TO-DO
  }
}
